--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
     ports:
-      - "5432:5432"
+      - "5433:5432"
   redis:
     image: redis:7
     ports:
@@ -31,3 +31,6 @@ services:
     command: celery -A app.tasks worker --loglevel=info
     depends_on:
       - redis
+    environment:
+      DATABASE_URL: postgresql://user:pass@db/genuin
+      REDIS_URL: redis://redis:6379
