--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "next": "14.0.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "tailwindcss": "@tailwindcss/typography"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "typescript": "^5",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.32",
+    "autoprefixer": "^10.4.16"
   }
 }
